[WEEK011] Add some optimization tweaks